# gdua

./: COPYRIGHT  Cargo.toml  README.md
gdua/: Cargo.toml  build.rs
gdua-core/: Cargo.toml
gdua-core/src/: lib.rs
gdua-ui/: Cargo.toml
gdua-ui/src/: app.rs  chart.rs  lib.rs  main.rs  service.rs  tree.rs
gdua-ui/static/: index.html  styles.css
gdua/src/: main.rs
