[package]
name = "gdua"
version = "0.1.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
gdua-core = { path = "../gdua-core" }
tokio = "0.1.15"
futures = "0.1.25"
web-view = "0.4.0"
serde = "1.0.88"
serde_json = "1.0.38"
tokio-batch = "0.2.0"

[build-dependencies]
gdua-ui = { path = "../gdua-ui" }
